Bug 945438 - Set event.cancelable for mousedown correctly on Metro. r=jimm, a=lsblakk